After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 685133 - housekeeping: really don't crash on exit
housekeeping: really don't crash on exit
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: housekeeping
3.6.x
Other Linux
: Normal critical
: ---
Assigned To: gnome-settings-daemon-maint
gnome-settings-daemon-maint
3.6.1
Depends on:
Blocks:
 
 
Reported: 2012-09-30 10:08 UTC by Pavel Vasin
Modified: 2012-10-01 10:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
housekeeping: really don't crash on exit (854 bytes, patch)
2012-09-30 10:09 UTC, Pavel Vasin
committed Details | Review
housekeeping: fix test crashed on notification (871 bytes, patch)
2012-09-30 10:10 UTC, Pavel Vasin
committed Details | Review

Description Pavel Vasin 2012-09-30 10:08:59 UTC
see the patch
Comment 1 Pavel Vasin 2012-09-30 10:09:39 UTC
Created attachment 225413 [details] [review]
housekeeping: really don't crash on exit
Comment 2 Pavel Vasin 2012-09-30 10:10:02 UTC
Created attachment 225414 [details] [review]
housekeeping: fix test crashed on notification
Comment 3 Matthias Clasen 2012-09-30 18:15:35 UTC
Review of attachment 225413 [details] [review]:

Good catch
Comment 4 Matthias Clasen 2012-09-30 18:16:05 UTC
Review of attachment 225414 [details] [review]:

Makes sense
Comment 5 Matthias Clasen 2012-09-30 18:16:16 UTC
Review of attachment 225414 [details] [review]:

Makes sense