housekeeping: Really don't crash on exit

Function arg "notification" shadowed global var "notification"

https://bugzilla.gnome.org/show_bug.cgi?id=685133